доделал html и css

--- a/css/style.css
+++ b/css/style.css
@@ -19,30 +19,31 @@ body {
   box-shadow: 0 0 17px rgba(26, 21, 21, 0.67);
 }
 
-.block-content {
+.content {
   width: 80%;
+  font-family: sans-serif;
 }
 
 header {
   text-transform: uppercase;
-  color: #232a3b80;
-  font-family: sans-serif;
-  font-size: 0.7em;
-  font-weight: bold;
+  color: #232a3b66;
+  font-size: 0.6em;
+  font-weight: 600;
   margin-top: 15%;
   margin-left: 12%;
+  letter-spacing: 1.7px;
 }
 
 h1 {
-  color: #030303;
-  font-size: 2em;
-  font-family: sans-serif;
+  color: #4a3e3e;
+  font-size: 2.4em;
+  font-weight: lighter;
+  margin: 3%;
   margin-left: 11.5%;
 }
 
 .text {
   color: #232a3b80;
-  font-family: sans-serif;
   font-size: 0.7em;
   margin-left: 12%;
   line-height: 2em;
@@ -52,39 +53,98 @@ h1 {
   display: flex;
   flex-direction: row;
   align-items: center;
-  width: 60%;
+  width: 79%;
   margin-left: 12%;
   background: white;
   border: 1px solid #232a3b1a;
+  height: 65px;
   border-radius: 8px;
+  transition: all 0.25s ease-out;
+  cursor: pointer;
 }
 
-.button-google {
-  width: 30%;
+.button:hover {
+  transform: scale(1.01);
+  box-shadow: 0 5px 10px #232a3b1a;
+}
+
+.button-social-network {
+  width: 20%;
   display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .button__text-img {
-  width: 70%
+  width: 60%;
+  text-transform: uppercase;
+  font-size: 0.55em;
+  font-weight: 600;
+  color: #232a3b99;
+  letter-spacing: 1.5px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
-.button__img-google {
+.button__img-social-network {
   width: 20px;
   height: 20px;
-  margin-left: 25%;
 }
 
 .button__img-plus {
-  width: 7px;
-  height: 7px;
+  width: 6px;
+  height: 6px;
 }
 
-.block-photo {
+hr {
+  margin-top: 67px;
+  color: #ece0e099;
+  margin-bottom: 0;
+}
+
+footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 79%;
+  margin-left: 12%;
+  height: 68px;
+}
+
+.footer__text-left {
+  font-size: 0.8em;
+  color: #232a3b80;
+}
+
+.footer__text-right {
+  font-size: 0.5em;
+  text-transform: uppercase;
+  letter-spacing: 1.7px;
+  font-weight: 900;
+  color: #12e012b3;
+  width: 25%;
+}
+
+.footer__img {
+  width: 8%;
+}
+
+. .photo {
   width: 45%;
 }
 
-.block-photo__img-city {
+.photo__img-city {
   width: 100%;
   height: 100%;
   border-radius: 0 1% 1% 0;
+}
+
+.nav {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 240px;
+  margin-top: 67px;
 }
